# ARI

./: .gitignore  README.Md  README.md  ari_public-melodic.rosinstall  src
jpo/: CMakeLists.txt  README.md  package.xml
jpo/scripts/control/: ari_with_controller.py
jpo/scripts/welcome/: run_welcome.py  run_welcome_face.py  run_welcome_person.py
resources/: CHEATSHEET.md  LEXIQUE.md  STEPS.md
sandbox/: CMakeLists.txt  package.xml
sandbox/launch/: welcome.launch
sandbox/scripts/move/: run_control_ari.py  run_joy_ari.py  run_shaking_hands.py  run_wave.py
sandbox/scripts/welcome/: run_welcome.py
sandbox/src/: .face_detector_python.py.swp  .reply.py.swp  face_detector_python.py  heyari.py  heyari2.py  heyari3.py  heyari4.py  publish.cpp  repeat.py  repeat2.py  reply.py  say.py  speechtranscriber.py  tryfr.py  website.py
sandbox/src/move/: run_dab_v1.cpp  run_default_position.cpp
sandbox/src/move/base/: run_backward.cpp  run_forward.cpp  run_right_arm.cpp  run_rotation.cpp  welcome.cpp
sandbox/src/run_backward/: CMakeLists.txt  package.xml
src/resources/: CHEATSHEET.md
